# esql

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
public/data/: load_sales_table.sql  sales.csv
public/docs/: syntax.md
src/esql/: __init__.py  accessor.py  api.py  main.py
src/esql/execution/: algorithms.py  error.py  execute.py  groupedRow.py  grouped_row.py
src/esql/parser/: constants.py  error.py  parse.py  types.py  util.py
tests/: oldt.py  test_clause_parsing.py  test_new.py  test_parser_util.py
tests/accessor/: test_accessor.py
tests/execution/: test_algorithms.py  test_execution_integration.py  test_execution_unit.py
tests/parser/: test_parse.py  test_util.py
