[project]
name = "esql"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Hope", email = "lucasfhope@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
]

[tool.poetry]
packages = [{include = "esql", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
dotenv = "^0.9.9"
psycopg2 = "^2.9.10"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
